--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,9 @@ dependencies:
   cloud_firestore: ^4.13.5
   image_picker: ^1.0.4
   flutter_phone_direct_caller: ^2.1.1
-
+  sqflite: ^2.3.0
+  shared_preferences: ^2.2.2
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
